--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>html</title>
+    <title>BlueCollar Home Page</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Mulish&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h2>Tekshirib ko'rish jarayoni</h2>
+    <button id="btn-top" style="display: none;"></button>
+    <div class="header" id="home">
+        <div class="information">
+            <div class="container">
+                <div class="info-box">
+                    <p class="desc">Opening Hours: 06:00 to 20:00</p>
+                    <div class="social">
+                        <a href="#" class="link"><img src="images/facebook.svg"></a>
+                        <a href="#" class="link"><img src="images/twitter.svg"></a>
+                        <a href="#" class="link"><img src="images/pinterest.svg"></a>
+                        <a href="#" class="link"><img src="images/instagram.svg"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contact">
+        <div class="container">
+            <div class="contact-box">
+                <a href="#" class="logo">
+                    <img src="images/header-logo.svg" alt="Blue-Color logo">
+                </a>
+                <div class="contact-us">
+                    <div class="mail">
+                        <div class="m-logo">
+                            <img src="images/mail-us.svg">
+                        </div>
+                        <div class="text">
+                            <h3>Mail Us</h3>
+                            <a href="mailto:doniyorxoliqov591@gmail.com">Info@bluecollar.com</a>
+                        </div>
+                    </div>
+                    <div class="call">
+                        <div class="m-logo">
+                            <img src="images/call-us.svg">
+                        </div>
+                        <div class="text">
+                            <h3>Call Us</h3>
+                            <a href="tel:+998917000530">+01 569 896 654</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
